31 July 2018: Wouter
	- Patches from Jim Hague (Sinodun) for EDNS KeepAlive.
	- Sort out test runs when the build directory isn't the project
	  root directory.
	- Add config tcp-idle-timeout (default 30s). This applies to
	  client connections only; the timeout on TCP connections upstream
	  is unaffected.
	- Error if EDNS Keepalive received over UDP.
	- Add edns-tcp-keepalive and edns-tcp-keepalive timeout options
	  and implement option in client responses.
	- Correct and expand manual page entries for keepalive and idle timeout.
	- Implement progressive backoff of TCP idle/keepalive timeout.
	- Fix 'make depend' to work when build dir is not project root.
	- Add delay parameter to streamtcp, -d secs.
	  To be used when testing idle timeout.
	- From Wouter: make depend, the dependencies in the patches did not
	  apply cleanly.  Also remade yacc and lex.
	- Fix mesh.c incompatible pointer pass.
	- Please doxygen so it passes.
	- Fix #4139: Fix unbound-host leaks memory on ANY.

30 July 2018: Wouter
	- Fix #4136: insufficiency from mismatch of FLEX capability between
	  released tarball and build host.

27 July 2018: Wouter
	- Fix man page, say that chroot is enabled by default.

26 July 2018: Wouter
	- Fix #4135: 64-bit Windows Installer Creates Entries Under The
	  Wrong Registry Key, reported by Brian White.

23 July 2018: Wouter
	- Fix use-systemd readiness signalling, only when use-systemd is yes
	  and not in signal handler.

20 July 2018: Wouter
	- Fix #4130: print text describing -dd and unbound-checkconf on
	  config file read error at startup, the errors may have been moved
	  away by the startup process.
	- Fix #4131: for solaris, error YY_CURRENT_BUFFER undeclared.

19 July 2018: Wouter
	- Fix #4129 unbound-control error message with wrong cert permissions
	  is too cryptic.

17 July 2018: Wouter
	- Fix #4127 unbound -h does not list -p help.
	- Print error if SSL name verification configured but not available
	  in the ssl library.